--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% load static %}
+{% load custom_filters %}
 {% load cart_tools %}
 
 {% block page_header %}
@@ -56,7 +57,7 @@
                                 <tr>
                                     <td class="p-3 w-25">
                                         {% if item.photo.image %}
-                                        <img class="img-fluid rounded" src="{{ item.photo.image.url }}" alt="{{ item.photo.title }}">
+                                        <img class="img-fluid rounded" src="{{ item.photo.image.url|cloudinary_optimized }}" alt="{{ item.photo.title }}">
                                         {% else %}
                                         <img class="img-fluid rounded" src="{{ MEDIA_URL }}noimage.png" alt="{{ item.photo.title }}">
                                         {% endif %}
@@ -167,6 +168,24 @@
 </div>
 
 <script type="text/javascript">
+    // Increment the quantity
+$('.increment-qty').click(function() {
+    var itemId = $(this).data('item_id');
+    var input = $('#id_qty_' + itemId);
+    var newValue = parseInt(input.val()) + 1;
+    input.val(newValue);  // Update input field with new value
+    input.trigger('change');  // Trigger change event to update form value
+});
+
+// Decrement the quantity
+$('.decrement-qty').click(function() {
+    var itemId = $(this).data('item_id');
+    var input = $('#id_qty_' + itemId);
+    var newValue = Math.max(1, parseInt(input.val()) - 1);  // Prevent going below 1
+    input.val(newValue);  // Update input field with new value
+    input.trigger('change');  // Trigger change event to update form value
+});
+
     // Remove item and show modal on success
     $('.remove-item').click(function(e) {
         e.preventDefault();
