--- a/photos/templates/photos/edit_photo.html
+++ b/photos/templates/photos/edit_photo.html
@@ -1,9 +1,10 @@
 {% extends 'base.html' %}
 {% load static %}
+{% load custom_filters %}
 
 {% block title %}{{ photo.title }} | Really Deep Photography{% endblock %}
 
-{% block page_header %}{% endblock %} <!-- Remove the hero section -->
+{% block page_header %}{% endblock %}
 
 {% block content %}
 <h1>Edit Photo</h1>
