Add block titles to all pages to improve seo

--- a/about/templates/about/about.html
+++ b/about/templates/about/about.html
@@ -1,6 +1,9 @@
 {% extends 'base.html' %}
+{% block title %}About Us | Really Deep Photography{% endblock %}
+{% block page_header %}{% endblock %}
+
 {% load static %}
-{% load custom_filters %}  <!-- Load the custom filter -->
+{% load custom_filters %}
 
 {% block content %}
 <div class="container">
