--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -1,4 +1,6 @@
 {% extends "base.html" %}
+{% block title %}Checkout | Secure Payment | Really Deep Photography{% endblock %}
+
 {% load crispy_forms_tags %}
 {% load static %}
 {% load cart_tools %}
