--- a/contact/templates/contact/contact.html
+++ b/contact/templates/contact/contact.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block title %}{{ photo.title }} | Really Deep Photography{% endblock %}
+{% block title %}Contact | Message Really Deep Photography{% endblock %}
 
 {% block page_header %}{% endblock %}
 
