--- a/photos/templates/photos/search_results.html
+++ b/photos/templates/photos/search_results.html
@@ -1,4 +1,6 @@
 {% extends 'base.html' %}
+{% block title %}Search Results | Message Really Deep Photography{% endblock %}
+
 {% load static %}
 {% load custom_filters %}  <!-- Load the custom filter -->
 
