--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -1,4 +1,6 @@
 {% extends "base.html" %}
+{% block title %}Shopping Cart | Really Deep Photography{% endblock %}
+
 {% load static %}
 {% load custom_filters %}
 {% load cart_tools %}
