--- a/photos/templates/photos/gallery.html
+++ b/photos/templates/photos/gallery.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% load custom_filters %}
 
-{% block title %}{{ photo.title }} | Really Deep Photography{% endblock %}
+{% block title %}Gallery | Browse Stunning Photography | Really Deep Photography{% endblock %}
 
 {% block page_header %}{% endblock %} <!-- Remove the hero section -->
 
