--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -133,6 +133,18 @@ input[type="text"]:focus {
     text-decoration: underline;
 }
 
+/* Hide number input arrows */
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+input[type="number"] {
+    -moz-appearance: textfield; /* For Firefox */
+    appearance: textfield; /* For other browsers */
+}
+
 /* Footer */
 footer {
     background-color: #333;
@@ -147,34 +159,6 @@ footer {
 }
 
 /* Media Queries for larger screens */
-@media (min-width: 768px) {
-    .hero-section h1 {
-        font-size: 2.5rem;
-    }
-
-    .hero-section p {
-        font-size: 1.5rem;
-    }
-
-    .container {
-        max-width: 750px;
-    }
-}
-
-@media (min-width: 992px) {
-    .hero-section h1 {
-        font-size: 3rem;
-    }
-
-    .hero-section p {
-        font-size: 1.75rem;
-    }
-
-    .container {
-        max-width: 960px;
-    }
-}
-
 @media (min-width: 1200px) {
     .hero-section h1 {
         font-size: 3.5rem;
