--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -1,5 +1,12 @@
 {% extends "base.html" %}
-{% block title %}Shopping Cart | Really Deep Photography{% endblock %}
+{% block title %}Your Cart | Review Selected Photography Prints{% endblock %}
+
+{% block head %}
+    {{ block.super }}
+    <meta name="description" content="Review your selected photography prints from Really Deep Photography before completing your purchase. Secure checkout for quality prints.">
+    <meta name="keywords" content="cart, review cart, selected prints, photography prints, art shopping">
+{% endblock %}
+
 
 {% load static %}
 {% load custom_filters %}
