--- a/contact/templates/contact/contact.html
+++ b/contact/templates/contact/contact.html
@@ -1,7 +1,13 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block title %}Contact | Message Really Deep Photography{% endblock %}
+{% block title %}Contact Us | Connect with Really Deep Photography{% endblock %}
+
+{% block head %}
+    {{ block.super }}
+    <meta name="description" content="Get in touch with Really Deep Photography. Whether you have questions or need assistance with your order, we're here to help. Contact us today.">
+    <meta name="keywords" content="contact, customer service, photography prints, get in touch, Really Deep Photography">
+{% endblock %}
 
 {% block page_header %}{% endblock %}
 
