--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -29,7 +29,7 @@
         {% for photo in featured_photos %}
         <div class="col-md-4">
             <div class="card mb-4">
-                <img src="{{ photo.image.url|cloudinary_optimized }}" class="card-img-top img-fluid" alt="{{ photo.title }}">
+                <img src="{{ photo.image.url|cloudinary_optimized }}" class="card-img-top img-fluid" alt="Featured photo: {{ photo.title }} - Beautiful forest scenery">
                 <div class="card-body">
                     <h5 class="card-title">{{ photo.title }}</h5>
                     <p class="card-text">{{ photo.description }}</p>
