--- a/photos/templates/photos/photo_detail.html
+++ b/photos/templates/photos/photo_detail.html
@@ -22,7 +22,7 @@
     <div class="row">
         <div class="col-md-6">
             <!-- Cloudinary image with optimization -->
-            <img src="{{ photo.image.url|cloudinary_optimized }}" class="img-fluid" alt="{{ photo.title }}">
+            <img src="{{ photo.image.url|cloudinary_optimized }}" class="img-fluid" alt="{{ photo.title }} - Captivating forest scenery">
         </div>
         <div class="col-md-6">
             <h4>Description</h4>
