--- a/static/css/style.css
+++ b/static/css/style.css
@@ -171,7 +171,7 @@ footer {
 }
 
 .mailchimp-signup .form-control {
-    background-color: #333;
+    background-color: white;
     color: #fff;
     border: 1px solid #444;
     border-radius: 0;
