--- a/templates/base.html
+++ b/templates/base.html
@@ -137,7 +137,7 @@
                             target="_blank" 
                             class="validate">
                             <div id="mc_embed_signup_scroll">
-                                <label for="mce-EMAIL" class="form-label">Subscribe to our Newsletter</label>
+                                <label for="mce-EMAIL" class="form-label text-white">Subscribe to our Newsletter</label>
                                 <div class="input-group">
                                     <input type="email" name="EMAIL" class="form-control" id="mce-EMAIL" placeholder="Email Address" required>
                                     <button type="submit" name="subscribe" id="mc-embedded-subscribe" class="btn btn-primary">Subscribe</button>
