--- a/photos/templates/photos/search_results.html
+++ b/photos/templates/photos/search_results.html
@@ -2,7 +2,11 @@
 {% block title %}Search Results | Message Really Deep Photography{% endblock %}
 
 {% load static %}
-{% load custom_filters %}  <!-- Load the custom filter -->
+{% load custom_filters %}
+
+{% if message %}
+    <p>{{ message }}</p>
+{% endif %}
 
 {% block content %}
 <div class="container">
