--- a/templates/account/verification_sent.html
+++ b/templates/account/verification_sent.html
@@ -18,6 +18,9 @@
                     We have sent an email to you for verification. Follow the link provided in the email to finalize the signup process. If you do not see the verification email in your main inbox, check your spam folder. Please contact us if you do not receive the verification email within a few minutes.
                 {% endblocktrans %}
             </p>
+
+            {% include "partials/messages.html" %}
+            
         </div>
     </div>
 </div>
