--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -33,19 +33,7 @@
         </div>
 
         <!-- Success and error messages -->
-        {% if messages %}
-        <div class="row">
-            <div class="col">
-                <div class="alert-container">
-                    {% for message in messages %}
-                    <div class="alert alert-{{ message.tags }} mb-3" role="alert">
-                        {{ message }}
-                    </div>
-                    {% endfor %}
-                </div>
-            </div>
-        </div>
-        {% endif %}
+        {% include "partials/messages.html" %}
 
         <div class="row">
             <div class="col">
@@ -209,6 +197,9 @@
             success: function(response) {
                 // Show the modal after item is successfully removed
                 $('#removeCartModal').modal('show');
+                setTimeout(() => {
+                    window.location.reload();
+                }, 3000);
             },
             error: function() {
                 alert("Error removing item.");
