--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -10,8 +10,7 @@
     <div class="text-center">
         <h2 class="display-4 text-success">Order Successful!</h2>
         <p class="lead mt-3">Thank you for your purchase!</p>
-        <p>Your order number is <strong>{{ order.order_number }}</strong>.</p>
-        <p>A confirmation email has been sent to <strong>{{ order.email }}</strong>.</p>
+        {% include "partials/messages.html" %}
     </div>
     
     <!-- Order Summary -->
