Correct meta tags on base html

--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,10 @@
     {% endblock %}
 
     {% block extra_meta %}
+    <meta name="description" content="Explore unique, high-quality photography prints from Really Deep Photography. Discover captivating art pieces that transform any space with beauty and meaning.">
+    <meta name="keywords" content="photography prints, art photography, fine art prints, Really Deep Photography, unique wall art, home decor, photography gallery">
+    <meta name="author" content="Really Deep Photography">
+    <meta name="robots" content="index, follow">
     {% endblock %}
 
     <!-- Favicon -->
