--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -87,7 +87,7 @@
                                     <p class="my-0">${{ item.photo.price|multiply:item.quantity }}</p>
                                 </td>
                                 <td class="py-3">
-                                    <a class="remove-item btn btn-danger btn-sm" id="remove_{{ item.photo_id }}">
+                                    <a class="remove-item btn btn-black btn-sm" id="remove_{{ item.photo_id }}">
                                         <small>Remove</small>
                                     </a>
                                 </td>
@@ -102,7 +102,7 @@
                             </tr>
                             <tr>
                                 <td colspan="5" class="text-right">
-                                    <a href="{% url 'gallery' %}" class="btn btn-outline-black rounded-0 btn-lg">
+                                    <a href="{% url 'gallery' %}" class="btn btn-black text-white rounded-0 btn-lg">
                                         <span class="icon">
                                             <i class="fas fa-chevron-left"></i>
                                         </span>
