--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -17,7 +17,7 @@
 <div class="d-flex flex-column min-vh-100">
     <div class="overlay"></div>
     <div class="container mb-2 flex-grow-1">
-        <div class="row">
+        <div class="row mt-0">
             <div class="col">
                 <hr>
                 <h2 class="logo-font mb-4">Shopping Cart</h2>
@@ -102,7 +102,7 @@
                             </tr>
                             <tr>
                                 <td colspan="5" class="text-right">
-                                    <a href="{% url 'gallery' %}" class="btn btn-black text-white rounded-0 btn-lg">
+                                    <a href="{% url 'gallery' %}" class="btn btn-black text-white rounded-0 btn-lg mb-2">
                                         <span class="icon">
                                             <i class="fas fa-chevron-left"></i>
                                         </span>
