--- a/photos/templates/photos/no_permission.html
+++ b/photos/templates/photos/no_permission.html
@@ -5,7 +5,7 @@
 {% block content %}
 <div class="text-center mt-5">
     <h2 class="display-4">Access Denied</h2>
-    <p class="lead">You do not have permission to view this page.</p>
+    <p class="lead">You're so busted! You do not have permission to view this page.</p>
     <a href="{% url 'home' %}" class="btn btn-primary">Return to Home</a>
 </div>
 {% endblock %}
