--- a/templates/base.html
+++ b/templates/base.html
@@ -38,7 +38,7 @@
 
     <title>{% block title %}Really Deep Photography{% endblock %}</title>
 </head>
-<body>
+<body class="d-flex flex-column min-vh-100">
     <header class="w-100">
         <nav class="navbar navbar-expand-lg navbar-light bg-light w-100">
             <div class="container-fluid">
@@ -59,6 +59,9 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'contact' %}">Contact</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'faq' %}">FAQ</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link position-relative" href="{% url 'view_cart' %}" id="cart-tab">
@@ -113,7 +116,7 @@
     </header>
 
     <!-- Main Content -->
-    <main>
+    <main class="flex-grow-1">
         <div class="container mt-4">
             {% block content %}
             {% endblock %}
