--- a/faq/templates/faq/faq.html
+++ b/faq/templates/faq/faq.html
@@ -12,21 +12,21 @@
 {% block page_header %}{% endblock %}
 
 {% block content %}
-<div class="container mt-5">
+<div class="container my-5">
     <h1 class="text-center">Frequently Asked Questions</h1>
-    <div class="accordion mt-4" id="faqAccordion">
+    <div class="accordion" id="faqAccordion">
         {% for faq in faqs %}
         <div class="card">
             <div class="card-header" id="heading{{ forloop.counter }}">
                 <h2 class="mb-0">
-                    <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapse{{ forloop.counter }}" aria-expanded="false" aria-controls="collapse{{ forloop.counter }}">
+                    <button class="btn btn-link btn-block text-left" type="button" data-bs-toggle="collapse" data-bs-target="#collapse{{ forloop.counter }}" aria-expanded="true" aria-controls="collapse{{ forloop.counter }}">
                         {{ faq.question }}
                     </button>
                 </h2>
             </div>
-            <div id="collapse{{ forloop.counter }}" class="collapse" aria-labelledby="heading{{ forloop.counter }}" data-parent="#faqAccordion">
+            <div id="collapse{{ forloop.counter }}" class="collapse" aria-labelledby="heading{{ forloop.counter }}" data-bs-parent="#faqAccordion">
                 <div class="card-body">
-                    {{ faq.answer|safe }}
+                    {{ faq.answer }}
                 </div>
             </div>
         </div>
