--- a/photos/templates/photos/admin_panel.html
+++ b/photos/templates/photos/admin_panel.html
@@ -144,12 +144,36 @@
                                 <button type="submit" class="btn btn-sm btn-dark">Update</button>
                             </form>
 
-                            <!-- Delete FAQ Form -->
-                            <form method="POST" class="d-inline-block">
-                                {% csrf_token %}
-                                <input type="hidden" name="faq_id" value="{{ faq.id }}">
-                                <button type="submit" name="faq_delete" value="1" class="btn btn-sm btn-danger">Delete</button>
-                            </form>
+                            <!-- Button to trigger modal -->
+                            <button type="button" class="btn btn-danger btn-sm" data-bs-toggle="modal" data-bs-target="#modal-delete-{{ faq.id }}">
+                                Delete
+                            </button>
+
+                            <!-- Modal -->
+                            <div class="modal fade" id="modal-delete-{{ faq.id }}" tabindex="-1" aria-labelledby="modal-delete-{{ faq.id }}-label" aria-hidden="true">
+                                <div class="modal-dialog">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <h5 class="modal-title fs-5" id="modal-delete-{{ faq.id }}-label">Delete FAQ</h5>
+                                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                        </div>
+                                        <div class="modal-body">
+                                            Are you sure you want to delete this FAQ?
+                                            <br>
+                                            <small class="text-muted">This action cannot be undone.</small>
+                                        </div>
+                                        <div class="modal-footer">
+                                            <button type="button" class="btn btn-secondary btn-sm" data-bs-dismiss="modal">Cancel</button>
+                                            <form method="POST">
+                                                {% csrf_token %}
+                                                <input type="hidden" name="faq_delete" value="1">
+                                                <input type="hidden" name="faq_id" value="{{ faq.id }}">
+                                                <button type="submit" class="btn btn-sm btn-danger">Delete</button>
+                                            </form>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </td>
                     </tr>
                     {% endfor %}
